# rawfx

./: .gitignore  .gitmodules  CMakeLists.txt
rawfx-core/: CMakeLists.txt
rawfx-core/inc/rawfx/comp/: background.h  composite.h  fps_counter.h
rawfx-core/inc/rawfx/core/: composite.h  engine.h  event.h  handler.h
rawfx-core/inc/rawfx/defs/: loader.h
rawfx-core/inc/rawfx/dev/: assert.h
rawfx-core/inc/rawfx/graphics/: color.h
rawfx-core/inc/rawfx/math/: generic_vec.h  vec.h
rawfx-core/inc/rawfx/util/: algorithm.h  random_access_iterator.h  range.h
rawfx-core/include/rawfx/core/: composite.h  engine.h  event.h  handler.h
rawfx-core/src/: main.cpp
rawfx-core/src/rawfx/comp/: background.cpp  composite.cpp
rawfx-core/src/rawfx/core/: composite.cpp  engine.cpp  event.cpp  handler.cpp
rawfx-core/src/rawfx/defs/: loader.cpp
rawfx-core/test/: main.cpp
rawfx-core/test/rawfx/: custom.h
rawfx-core/test/rawfx/comp/: composite.cpp
rawfx-core/test/rawfx/core/: composite.cpp
rawfx-core/test/rawfx/defs/: loader.cpp
rawfx-core/test/rawfx/math/: vec.cpp
rawfx-core/test/rawfx/util/: range.cpp
rawfx-sample/: CMakeLists.txt
rawfx-sample/src/: main.cpp
